Add new route
Still need to format the data
